--- a/CardioVascular/src/styles/Contact.css
+++ b/CardioVascular/src/styles/Contact.css
@@ -1,6 +1,6 @@
 /* Contact.css */
 :root {
-  --primary-color: #2A5C82;
+  --primary-color: #be0000;
   --accent-color: #be0000;
   --text-color: #444;
   --background-color: #f8f9fa;
